fix: remove teeny instances of horizontal scroll

--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -174,7 +174,7 @@
     }
 }
 
-@media screen and (max-width: 1240px) {
+@media screen and (max-width: 1270px) {
     .news-card {
         width: 280px;
         height: 500px;
