--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -74,7 +74,7 @@
     }
 }
 
-@media screen and (max-width: 1240px) {
+@media screen and (max-width: 1270px) {
     .news-card__grid {
         gap: 12px;
         padding: 0;
